add test util for JSON