@@ -1,18 +1,23 @@
 package ru.graduation;
 
-import java.util.Arrays;
+import org.springframework.test.web.servlet.ResultMatcher;
+
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static ru.graduation.TestUtil.readListFromJsonMvcResult;
 
 public class TestMatcher<T> {
+    private final Class<T> clazz;
     private final String[] fieldsToIgnore;
 
-    private TestMatcher(String... fieldsToIgnore) {
+    private TestMatcher(Class<T> clazz, String... fieldsToIgnore) {
+        this.clazz = clazz;
         this.fieldsToIgnore = fieldsToIgnore;
     }
 
-    public static <T> TestMatcher<T> usingFieldsComparator(String... fieldsToIgnore) {
-        return new TestMatcher<>(fieldsToIgnore);
+    public static <T> TestMatcher<T> usingFieldsComparator(Class<T> clazz, String... fieldsToIgnore) {
+        return new TestMatcher<>(clazz, fieldsToIgnore);
     }
 
     public void assertMatch(T actual, T expected) {
@@ -20,10 +25,22 @@ public class TestMatcher<T> {
     }
 
     public void assertMatch(Iterable<T> actual, T... expected) {
-        assertMatch(actual, Arrays.asList(expected));
+        assertMatch(actual, List.of(expected));
     }
 
     public void assertMatch(Iterable<T> actual, Iterable<T> expected) {
         assertThat(actual).usingElementComparatorIgnoringFields(fieldsToIgnore).isEqualTo(expected);
+    }
+
+    public ResultMatcher contentJson(T expected) {
+        return result -> assertMatch(TestUtil.readFromJsonMvcResult(result, clazz), expected);
+    }
+
+    public ResultMatcher contentJson(T... expected) {
+        return contentJson(List.of(expected));
+    }
+
+    public ResultMatcher contentJson(Iterable<T> expected) {
+        return result -> assertMatch(readListFromJsonMvcResult(result, clazz), expected);
     }
 }
